<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fauna</string>

    <string name="activity_main_title">Fauna</string>
    <string name="activity_synchro_title">Data synchronization</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="activity_observers_title">Observers</string>

    <string name="preference_category_observers">Observers</string>
    <string name="preference_category_observers_default_observer">Default observer</string>
    <string name="preference_category_pointing">Pointing</string>
    <string name="preference_category_pointing_display_geographic_units">Display geographic units</string>
    <string name="preference_category_pointing_display_scale">Display the map scale</string>
    <string name="preference_category_taxa">Taxa</string>
    <string name="preference_category_taxa_display_details">Display the details of each taxon</string>
    <string name="preference_category_density">Quality</string>
    <string name="preference_category_density_title">Quality rendering of map</string>
    <string name="preference_category_density_dialog">Choice of rendering</string>

    <string name="pager_fragment_webview_title">Pointing</string>

    <string name="observers_and_date_date_format">MMMM dd, yyyy</string>

    <string name="message_unities_not_found">Unable to load unities \'%1$s\'</string>
    <string name="message_saving_current_input_failed">Unable to save your input</string>

    <string name="progress_message_loading_unities">Loading unities &#8230;</string>
    <string name="progress_message_saving_current_input">Saving current input &#8230;</string>

    <string name="alert_dialog_confirm_cancel_title">Cancelling ?</string>
    <string name="alert_dialog_confirm_cancel_input_all_message">Cancelling all the current entry ?</string>
    <string name="alert_dialog_confirm_cancel_input_current_taxon_message">Cancelling the current taxon for this entry ?</string>
    <string name="alert_dialog_confirm_quit_title">Quit ?</string>
    <string name="alert_dialog_confirm_quit_go_home_message">Save and go back to home ?</string>
    <string name="alert_dialog_confirm_quit_finish_message">Save and quit ?</string>

    <string name="taxa_class_amphibia_hint">Amphibia</string>
    <string name="taxa_class_mammalia_hint">Mammalia</string>
    <string name="taxa_class_aves_hint">Aves</string>
    <string name="taxa_class_osteichthyes_hint">Osteichthyes</string>
    <string name="taxa_class_reptilia_hint">Reptilia</string>

    <plurals name="results_input_selected_taxon_counting">
        <item quantity="one">Counting : 1</item>
        <item quantity="other">Counting : %d</item>
    </plurals>
    <string name="results_input_selected_taxon_criterion">Criterion : %1$s</string>

</resources>